@@ -1,3 +1,12 @@
+2011-12-13  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/app.c (app_new): Connected the status icon signal handlers
+	to the project start/stop signals
+
+	* src/status-icon.c (status_icon_project_stoped_handler)
+	(status_icon_project_started_handler): Added signal handlers for
+	the project started/stoped signal
+
 2011-12-07  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* src/app.c (app_project_started_handler)
